0028812: Regression. bugs modalg_6 bug28468_2 test case is crashed if CSF_FPE set to 1.

Test the possibility of line creation is added