src/GCPnts/GCPnts_DistFunction2d.cxx
@@ -25,7 +25,17 @@ GCPnts_DistFunction2d::GCPnts_DistFunction2d(const Adaptor2d_Curve2d& theCurve,
   myU1(U1), myU2(U2)
 {
   gp_Pnt2d P2d1 = theCurve.Value(U1), P2d2 = theCurve.Value(U2);
-  myLin = gp_Lin2d(P2d1, P2d2.XY() - P2d1.XY());
+  if (P2d1.SquareDistance(P2d2) > gp::Resolution())
+  {
+    myLin = gp_Lin2d(P2d1, P2d2.XY() - P2d1.XY());
+  }
+  else
+  {
+    //For #28812
+    theCurve.D0(U1 + .01*(U2 - U1), P2d2);
+    myLin = gp_Lin2d(P2d1, P2d2.XY() - P2d1.XY());
+  }
+
 }
 
 //=======================================================================
